--- a/README.org
+++ b/README.org
@@ -11,6 +11,8 @@ The project page in the freebsd wiki: https://wiki.freebsd.org/SummerOfCode2021P
 The wiki page also contains my weekly reports during GSoC.  
 
 ** Description
+[[https://papers.freebsd.org/2023/asiabsdcon/fan-VT_IME_Input_Method_Editor_in_FreeBSD_vt_4.files/fan-VT_IME_Input_Method_Editor_in_FreeBSD_vt_4.pdf][Project whitepaper]]
+
 This project aims to provide an environment that can run IME (input method engine) to enable users to type CJK characters in ~vt(4)~.
 
 This project was divided into two parts, backend and frontend. The backend is supposed to process keys sent from the frontend and translate them into valid CJK characters, depending on different input schemas. The frontend, on the other hand, recieves utf-8 encoded CJK characters and insert them on the screen. Additionally, the frontend need to print preedit string and candidates during composing.
