--- a/README.org
+++ b/README.org
@@ -12,23 +12,22 @@ The wiki page also contains my weekly reports during GSoC.
 
 ** Description
 
-This project aims to provide an environment that can run IME (input method engine) to enable users to type CJK characters in ~vt(4)~.
+This project aims to provide an environment that can run an IME (Input Method Engine) to enable users to type non-ASCII characters like CJK in vt(4).
 
-This project was divided into two parts, backend and frontend. The backend is supposed to process keys sent from the frontend and translate them into valid CJK characters, depending on different input schemas. The frontend, on the other hand, recieves utf-8 encoded CJK characters and insert them on the screen. Additionally, the frontend need to print preedit string and candidates during composing.
+This project was divided into two parts: backend and frontend. The backend processes keys sent from the frontend and translates them into valid CJK characters, depending on different input schemas. The frontend receives utf-8 encoded CJK characters and inserts them on the screen. Additionally, the frontend needs to print preedit strings and candidates during composing.
 
 ** Deliverables
- + *Backend*: An IME API server for communicating with the IME library
-   * Use ~librime~ as the input method engine library to translate keys into valid CJK characters.
-   * Create APIs for accessing the IME library functions.
-   * Provide extra features like schema selection, data deployment and data synchronization. 
- + *Frontend*: A graphical frontend for showing the current input status and characters/words candidates.  
-   + First stage: Implement the frontend in ~tmux~. 
-     + Design an IME client for interacting with the backend IME API server.
-     + Display IME components on the ~tmux~ status bar.
-   + Final stage: Implement the frontend in ~vt(4)~. 
-     + Handle keys in kernel and send them to the backend.
-     + Display IME components on the screen.
-
+   - /Backend/: An IME API server for communicating with the IME library
+     - Use /librime/ as the input method engine library to translate keys into valid CJK characters.
+     - Create APIs for accessing the IME library functions.
+     - Provide extra features like schema selection, data deployment, and data synchronization.
+   - /Frontend/: A graphical frontend for showing the current input status and characters/words candidates.
+     - First stage: Implement the frontend in /tmux/.
+       - Design an IME client for interacting with the backend IME API server.
+       - Display IME components on the /tmux/ status bar.
+     - Final stage: Implement the frontend in /vt(4)/.
+       - Handle keys in the kernel and send them to the backend.
+       - Display IME components on the screen.
 
 ** Results
 
